--- a/style.css
+++ b/style.css
@@ -3,11 +3,26 @@
     padding: 0;
 }
 
-.container {
+body {
     display: flex;
-    flex-direction: row; 
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-self: center;
+}
+
+.hide {
+    display: none !important;
+}
+
+.container {
+    border: solid 1px #000;
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    width: 506px;
+    width: 430px;
+    height: 430px;
+    padding: 4px;
 }
 
 .center {
@@ -25,7 +40,26 @@
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    
-  transition: width 2s;
+
+    transition: width 2s;
 }
- 
+
+.loading {
+    width: 430px;
+    height: 430px;
+    padding: 4px;
+    flex-direction: column;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: aliceblue;
+}
+
+
+.loading img {
+    width: 100px;
+    height: 100px;
+    margin: 20px;
+    display: inline-block;
+}
